Fix btn z-index

--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -14,7 +14,7 @@
 	justify-content: center;
 	align-items: center;
 	transition: all 300ms cubic-bezier(0.3, 0.27, 0.11, 0.97);
-	z-index: 999;
+	z-index: 888;
 	
 	@media (hover) {
 		margin: 0 0;
@@ -54,6 +54,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
+		z-index: -999;
 		transform: translate(-40%, 0);
 	}
 	&--services {
@@ -80,7 +81,7 @@
 		}
 		&-right {
 			position: absolute;
-			z-index: 999;
+			z-index: 888;
 			top: 0;
 			right: 0;
 			transform: translate(-15%, 12%);
@@ -95,16 +96,16 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			transform: translate(-38%, -37%);
 			z-index: -999;
+			transform: translate(-38%, -37%);
 		}
 
 		&-bottom {
 			position: absolute;	
 			right: 0;
 			bottom: 0;
-			transform: translate(-66%, 35%);
 			z-index: -999;
+			transform: translate(-66%, 35%);
 		}
 	}
 	&--footer {
